# theDAW

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  Setup-theDAW.bat  implementation_plan.md  pyproject.toml  requirements.txt  run_gradio.py  start-dev.bat  theDAW.bat  vj-embedded-snapshot.md
.github/workflows/: lint.yml
backend/: _devstack.py  _supervisor.py  admin_routes.py  assistant_routes.py  key_pool.py  rag.py  run.py  server.py
backend/core/: adb.py  background_workers.py  folder_dialog.py  idle.py  macro_runner.py  module_base.py  sidecar.py
backend/lib/: __init__.py  audio_analysis.py  ffmpeg.py  filtergraph.py  fir_utils.py  jobs.py  params.py
backend/modules/akvj/: __init__.py  kinect_sidecar.py  module.json  router.py  sidecar.py
backend/modules/analysis/: bars.py  engine.py  ffprobe.py  key.py  module.json  pitch.py  prompt.py  router.py
backend/modules/analyzer/: README.md  descriptors.py  module.json  presets.py  recommender.py  requirements.txt  router.py  rules.py  stack_builder.py
backend/modules/broadcast/: module.json  router.py
backend/modules/chimera/: config.py  detect.py  (+5 more)
docs/: DESIGN_PRINCIPLES.md  SHOWCASE.md  TASMO-VST-DAW-IMPORT-ROADMAP.md  USER_GUIDE.md  WHERE-WE-STAND.md  codebase-scan-2026-05-28.md  in-flight-work.md  plan-inpaint-in-editor.md  session-status-2026-05-28.md
docs/UI/: hover-text-guide.md  stabledaw_ui_rebuild_guide.md
docs/audits/: 2026-07-01-optimization-and-tech-debt-audit.md
docs/guides/: AUDIO_VS_NONAUDIO_FIELD_GUIDE.md  LIVE_CACHE_FIELD_DICTIONARY.md  SUNO_EXTERNAL_API.md  about-thedaw.md  dj-and-genealogy.md  model-overview.md  notation-and-score.md  prompting.md  theDAW_SoulX_Singer_Integration_Guide.md  theDAW_Vocal_Layer_Implementation_Brief.md
docs/notes/: 2026-05-25-chimera-library-save-missing.md  2026-05-25-server-pylance-cleanup.md
docs/plans/: 2025-05-10-frontend-tooltips.md  2026-05-10-ui-redesign-v2.md  2026-05-18-stabledaw-ui-polish-and-functionality.md  2026-05-20-advanced-workspace-overhaul.md  2026-05-20-gantasmobot-implementation-plan.md  2026-05-20-gantasmobot-integration-design.md  2026-05-21-plugin-module-system.md  2026-05-22-module-builder.md  2026-05-22-studio-process-failed-to-fetch.md  2026-05-24-chimera-tempo-multi-init.md  2026-05-25-stabledaw-overhaul-plan.md  2026-05-30-daw-docs-vj-dj-mobile-execution-plan.md  2026-05-31-slide-phase2-mixer-and-stacks.md  2026-06-01-dj-suite-foss-expansion.md  2026-06-12-noob-friendly-model-onboarding-plan.md  2026-06-13-global-layout-vj-library-optimizations-plan.md  2026-06-14-vj-watch-link-broadcast-plan.md  2026-06-16-punchlist-audit-vj-quest-handtracking-plan.md  2026-06-18-master-action-plan.md  2026-06-18-quest-colocation-plan.md  2026-06-18-soundfonts-instrument-builder-plan.md  2026-06-19-fl-timeline-midi-plan.md  2026-06-20-cline-reconcile-and-backend-concurrency-plan.md  2026-06-23-thedaw-xr-spatialization.md  2026-06-24-akvj-volcap-roadmap.md  2026-06-24-faceviz-sway-skeletal-integration.md  2026-06-24-show-matrix-vocal-spectra.md  2026-06-25-asciiline-glsl-port-spec.md  2026-06-25-next-block-vfx.md  multiselect-mashup-mobile-todo.md
docs/reports/: feature-doc-coverage-report.md  feature-doc-coverage.json
docs/screenshots/: README.md  manifest.json  manifest.md
docs/wiki/: README.md
docs/windows/: setup-guide.md  troubleshooting.md
docs/workflows/: autoencoder.md  inference.md  lora.md
electron-ui/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
electron-ui/main/: index.ts
electron-ui/preload/: index.ts
electron-ui/resources/: convert-with-thedaw.ps1  installer.nsh
electron-ui/scripts/: fetch-runtime-tools.mjs
exports/vj/: README.md
frontend/: .gitignore  README.md  _capture_clips.mjs  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: USER_GUIDE.md  chop.worklet.js  granular-morph.worklet.js  granular.worklet.js  piz_compressed.exr  theDAW.glb  theDAW.gltf  vinyl-scratch.worklet.js  yin.worklet.js
frontend/src/: App.tsx  index.css  main.tsx  signalsmith-stretch.d.ts
ganduit/: .gitignore  README.md
ganduit/scripts/: setup.ps1
ganduit/src/: GANduit.cpp  GANduit.h  GanArchive.cpp  GanArchive.h  config.h
grafting_day/: frontend-graft-guide.md
grafting_day/ui_v2/: README.md  index.html  metadata.json  package-lock.json  package.json
install/: setup.ps1
scripts/: build_api_compatible_cache.py  compare_midi_frontend_parsers.ts  diagnose_midi_library.py  ingest_suno_cache.py  install-hooks.ps1  install-hooks.sh  pre_encode_dataset.py  regenerate-docs.ps1  regenerate-docs.sh  smoke_test_pre_encode.sh  train_lora.py
scripts/git-hooks/: pre-commit
scripts/screenshots/: capture.ts  featureCoverage.ts  pickShowcaseTrack.ts  specs.ts  take-screenshots.mjs  tsconfig.json
showcase/: PRESENTATION.md  build_roughcut.sh
sidecars/magenta/: README.md  requirements.txt  server.py
sidecars/questcast/: package-lock.json  package.json  server.mjs
sliders/: compact.html  controller.html  index.html  script.js  style.css  surface.html  sync-demo.html  verify.html
stable_audio_3/: __init__.py  factory.py  loading_utils.py  model.py  model_configs.py  pipeline.py  verbose.py
stable_audio_3/interface/: diffusion_cond.py
stable_audio_3/models/: autoencoders.py  blocks.py  conditioners.py  dit.py  transformer.py
stable_audio_3/training/: diffusion.py  utils.py
tests/: conftest.py  test_analysis.py  test_arrange.py  test_backend_contract.py  test_chimera_detect.py  test_chimera_mashup_endpoint.py  test_chimera_mix.py  test_chimera_stretch.py  test_chimera_weave.py  test_controllervision_endpoints.py  test_idle_and_workers.py  test_inference.py  test_library_bundle.py  test_library_db.py  test_library_endpoints.py  test_library_media.py  test_library_store.py  test_library_tags.py  test_lora.py  test_midi.py  test_modeldl.py  test_notation.py  test_prompt.py  test_stems_engine.py  test_stems_sidecar.py  test_storage_store.py  test_tabs.py  test_vst_daw_tasmo.py
(+517 files in other folders)
