[project]
name = "stable-audio-3"
version = "0.1.0"
description = "Stable Audio 3: A state-of-the-art open platform for fast, high-quality generated audio and music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "numpy>=2.2.6",
    "packaging>=26.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.26",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "soundfile>=0.12.0",
    "safetensors>=0.7.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "tqdm>=4.67.3",
    "huggingface-hub>=1.7.1",
    "transformers>=5.8.0",
    # RAG module deps — move these to backend/modules/rag/module.json deps
    # when RAG is extracted into the module system. backend/rag.py imports
    # chromadb at runtime; without it the server logs a non-fatal warning and
    # the assistant runs without document retrieval.
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.28.1",
    "psutil>=5.9.0",
    "librosa>=0.10.0",
    "onnxruntime<1.24",
    # Windows-only: pre-built CUDA 12.8 wheel for Python 3.10. Pinned here so
    # `uv sync` never removes it. The wheel URL lives in [tool.uv.sources].
    # Update both when upgrading torch/CUDA.
    "flash-attn ; sys_platform == 'win32' and python_version < '3.11'",
    "aubio>=0.4.9",
    "mutagen>=1.47",
]

[project.optional-dependencies]
ui = [
  "gradio==6.3.0",
  "accelerate>=1.13.0",
]

lora = [
  "pytorch_lightning==2.5.5",
  "dill>=0.4.1",
]

server = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
flash-attn = [
  { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.7.0cxx11abiFALSE-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
[tool.uv]
# Needed because the PyTorch CUDA index pins some packages (e.g. certifi) at
# older versions than PyPI. Without this flag uv refuses to install them.
index-strategy = "unsafe-best-match"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    # 🚨 HARD RULE: ruff is pinned EXACTLY. The same version literal also
    # appears in .github/workflows/lint.yml as the `RUFF_VERSION` env var.
    # Bumping ruff REQUIRES updating BOTH places in the same commit and
    # running `uv sync --group dev` + `uv run ruff format .` in that same
    # commit. Never run a different ruff (global pip, pipx, system) against
    # this repo — version drift silently corrupts formatting. See CLAUDE.md
    # → "🚨 HARD RULES" for the full rule.
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "stable_audio_3/models",
    "stable_audio_3/inference",
    "stable_audio_3/interface",
    "stable_audio_3/data",
    "stable_audio_3/training",
]
