[project]
name = "stable-audio-3"
version = "0.1.0"
description = "Stable Audio 3: A state-of-the-art open platform for fast, high-quality generated audio and music"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "numpy>=2.2.6",
    "packaging>=26.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.26",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "soundfile>=0.12.0",
    "safetensors>=0.7.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "tqdm>=4.67.3",
    "huggingface-hub>=1.7.1",
    "transformers>=5.8.0",
    # RAG module deps — move these to backend/modules/rag/module.json deps
    # when RAG is extracted into the module system. backend/rag.py imports
    # chromadb at runtime; without it the server logs a non-fatal warning and
    # the assistant runs without document retrieval.
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.28.1",
    "psutil>=5.9.0",
    "librosa>=0.10.0",
    # edit-tool-stack (backend/modules/{mastering,restoration,enhance,creative_*,delivery,analyzer}):
    # scipy = linear-phase FIR design + dynamic-EQ DSP; pyloudnorm = pure-Python LUFS
    # cross-check used by the analyzer + metering (loudness itself comes from FFmpeg loudnorm).
    "scipy>=1.11",
    "pyloudnorm>=0.1.1",
    "onnxruntime<1.24",
    # Windows-only: pre-built CUDA 12.8 wheel for Python 3.10. Pinned here so
    # `uv sync` never removes it. The wheel URL lives in [tool.uv.sources].
    # Update both when upgrading torch/CUDA.
    "flash-attn ; sys_platform == 'win32' and python_version < '3.11'",
    "aubio>=0.4.9",
    "mutagen>=1.47",
    # midi module (backend/modules/midi) — audio→MIDI transcription + export.
    # These were installed manually but undeclared, so `uv sync` pruned them and
    # broke the MIDI module; declared here so the working set is stable.
    "basic-pitch>=0.4.0",
    # basic-pitch (and some other deps) import the legacy `pkg_resources`, which
    # setuptools >= 81 REMOVED. Pin below 81 so `pkg_resources` keeps shipping;
    # without it basic-pitch conversion fails with "No module named 'pkg_resources'".
    "setuptools<81",
    # Piano-roll transcription engine (the midi module's second engine beside
    # basic-pitch). Downloads its checkpoint (~165 MB) to ~/piano_transcription
    # on first use.
    "piano-transcription-inference>=0.0.5",
    "pretty_midi>=0.2.11",
    "mido>=1.3.3",
    # notation module — symbolic music conversion / analysis backbone.
    "music21>=9.7.1,<10.3.0",
    "partitura>=1.9.0",
    # controllervision module — classical CV (Hough/contours) to infer a MIDI
    # controller's layout from a product photo. Headless (no GUI libs). The
    # module guards its import, so the backend still boots if this is absent.
    "opencv-python-headless>=4.9.0",
    # ytimport module (backend/modules/ytimport) — paste a URL (YouTube,
    # SoundCloud, Bandcamp, …) and pull the best audio via yt-dlp. Date-versioned
    # and updated often as site extractors change; keep a generous floor and let
    # `uv sync` pull the newest so YouTube/SoundCloud keep working.
    "yt-dlp>=2025.1.1",
    # akvj native Kinect point cloud (backend/modules/akvj/kinect_sidecar.py).
    # pyk4a-bundle ships its OWN matched k4a.dll + depthengine, so no separate
    # Azure Kinect SDK install is needed; the sidecar just works. Windows x64 +
    # Linux x64 only (no macOS wheel), gated so `uv sync` skips it elsewhere.
    # websockets is the sidecar's WebSocket client to the relay.
    "pyk4a-bundle ; (sys_platform == 'win32') or (sys_platform == 'linux' and platform_machine == 'x86_64')",
    "websockets>=12.0",
]

[project.optional-dependencies]
# accelerate is an optional Hugging Face acceleration extra. The legacy gradio
# UI (run_gradio.py + interface/diffusion_cond.py) was removed in a CVE sweep;
# the React + FastAPI app does not use gradio.
ui = [
  "accelerate>=1.13.0",
]

lora = [
  "pytorch_lightning==2.6.5",
  "dill>=0.4.1",
]

server = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
flash-attn = [
  { url = "https://github.com/kingbri1/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu128torch2.7.0cxx11abiFALSE-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
[tool.uv]
# Needed because the PyTorch CUDA index pins some packages (e.g. certifi) at
# older versions than PyPI. Without this flag uv refuses to install them.
index-strategy = "unsafe-best-match"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    # 🚨 HARD RULE: ruff is pinned EXACTLY. The same version literal also
    # appears in .github/workflows/lint.yml as the `RUFF_VERSION` env var.
    # Bumping ruff REQUIRES updating BOTH places in the same commit and
    # running `uv sync --group dev` + `uv run ruff format .` in that same
    # commit. Never run a different ruff (global pip, pipx, system) against
    # this repo — version drift silently corrupts formatting. See CLAUDE.md
    # → "🚨 HARD RULES" for the full rule.
    "ruff==0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "stable_audio_3/models",
    "stable_audio_3/inference",
    "stable_audio_3/interface",
    "stable_audio_3/data",
    "stable_audio_3/training",
    # Vendored git submodule (third-party MRT2 port); not linted by the parent project.
    "sidecars/magenta-rt2-nvidia",
    # Runtime-created isolated venv for the faster-whisper transcription sidecar.
    "backend/modules/vocal/transcription/.whisper_venv",
]
